--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,46 @@
 name: Android Build (POC)
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
-    name: Build Heaps Android POC
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup JDK
+    - name: Setup Java 8
       uses: actions/setup-java@v4
       with:
         distribution: temurin
-        java-version: 17
+        java-version: 8
 
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
 
-    - name: Install required Android components
+    - name: Install Android platform/NDK/CMake
       run: |
-        sdkmanager "platform-tools" "platforms;android-33" \
-                   "build-tools;33.0.2" "cmake;3.22.1" \
+        sdkmanager "platform-tools" \
+                   "platforms;android-33" \
+                   "build-tools;33.0.2" \
+                   "cmake;3.22.1" \
                    "ndk;21.4.7075529"
 
-    - name: Grant gradlew execute permission
-      run: chmod +x ./gradlew
+    - name: Downgrade Gradle wrapper to 6.8.3
+      run: ./gradlew wrapper --gradle-version 6.8.3
+
+    - name: Make gradlew executable
+      run: chmod +x gradlew
 
     - name: Build Debug APK
       run: ./gradlew assembleDebug --stacktrace
 
-    - name: Upload APK artifact
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: Heaps-Android-POC-APK
+        name: apk
         path: app/build/outputs/apk/debug/*.apk
