--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,32 @@ jobs:
         distribution: temurin
         java-version: 8
 
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v3
-
-    - name: Install Android platform/NDK/CMake
+    - name: Install Android SDK (manual)
       run: |
-        sdkmanager "platform-tools" \
-                   "platforms;android-33" \
-                   "build-tools;33.0.2" \
-                   "cmake;3.22.1" \
-                   "ndk;21.4.7075529"
+        mkdir -p $HOME/android-sdk
+        cd $HOME/android-sdk
+        
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdtools.zip
+        unzip cmdtools.zip -d cmdline-tools
+        mkdir -p cmdline-tools/latest
+        mv cmdline-tools/* cmdline-tools/latest || true
+
+        export ANDROID_HOME=$HOME/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+        echo "ANDROID_HOME=$ANDROID_HOME" >> $GITHUB_ENV
+        echo "PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
+
+        yes | sdkmanager --licenses
+
+    - name: Install platform + build-tools + NDK old
+      run: |
+        export ANDROID_HOME=$HOME/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+        
+        yes | sdkmanager "platform-tools" \
+                         "platforms;android-33" \
+                         "build-tools;30.0.3" \
+                         "ndk;21.4.7075529"
 
     - name: Downgrade Gradle wrapper to 6.8.3
       run: ./gradlew wrapper --gradle-version 6.8.3
@@ -39,8 +55,8 @@ jobs:
     - name: Build Debug APK
       run: ./gradlew assembleDebug --stacktrace
 
-    - name: Upload APK
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
       with:
-        name: apk
+        name: HeapsAndroidPOC
         path: app/build/outputs/apk/debug/*.apk
