--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,63 +1,129 @@
-name: Build Heaps Android POC
+name: Heaps Android POC
 
 on:
+  workflow_dispatch:
   push:
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
+
+env:
+  ANDROID_SDK_ROOT: ${{ runner.home }}/android-sdk
+  NDK_VERSION: "21.4.7075529"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      # Install Java 17
-      - name: Install JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
+    ###################################################################
+    # STEP 1 — Install JDK 17 (required by sdkmanager)
+    ###################################################################
+    - name: Setup JDK 17 for sdkmanager
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: "17"
 
-      # Download Android Cmdline Tools (latest)
-      - name: Install Android cmdline-tools
-        run: |
-          mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
+    ###################################################################
+    # STEP 2 — Install Android SDK + cmdline-tools manually
+    ###################################################################
+    - name: Install Android SDK and cmdline-tools
+      run: |
+        set -e
+        mkdir -p $ANDROID_SDK_ROOT
+        cd $ANDROID_SDK_ROOT
 
-          wget https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip
-          unzip commandlinetools-linux-*.zip -d temp
+        wget -q https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip -O tools.zip
+        unzip -q tools.zip -d temp
 
-          # Google requires folder name "latest"
-          mv temp/cmdline-tools latest
+        mkdir -p cmdline-tools
+        mv temp/cmdline-tools cmdline-tools/latest
 
-          echo "ANDROID_HOME=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
-          echo "$HOME/android-sdk/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "$HOME/android-sdk/platform-tools" >> $GITHUB_PATH
-          echo "$HOME/android-sdk/emulator" >> $GITHUB_PATH
+        echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+        echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
 
-      # Accept licenses
-      - name: Accept licenses
-        run: yes | sdkmanager --licenses
+    - name: Accept SDK licenses
+      run: yes | sdkmanager --licenses
 
-      # Install required Android components
-      - name: Install Android SDK packages
-        run: |
-          sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2" \
-                     "ndk;21.4.7075529" "cmake;3.22.1"
+    - name: Install Android packages
+      run: |
+        sdkmanager "platforms;android-33" \
+                   "platform-tools" \
+                   "build-tools;31.0.0" \
+                   "cmake;3.22.1" \
+                   "ndk;${{ env.NDK_VERSION }}"
 
-      # Install Haxe + hxcpp
-      - name: Install Haxe
-        run: |
-          sudo add-apt-repository ppa:haxe/releases -y
-          sudo apt-get update
-          sudo apt-get install -y haxe
-          mkdir -p ~/.haxelib
+    ###################################################################
+    # STEP 3 — Switch back to JDK 8 (for Gradle & project compatibility)
+    ###################################################################
+    - name: Setup JDK 8 for Gradle
+      uses: actions/setup-java@v4
+      with:
+        distribution: temurin
+        java-version: "8"
 
-          haxelib install hxcpp
-          haxelib install heaps
+    ###################################################################
+    # STEP 4 — Install Haxe + dependencies
+    ###################################################################
+    - name: Install Haxe and libs
+      run: |
+        sudo add-apt-repository -y ppa:haxe/releases
+        sudo apt-get update -y
+        sudo apt-get install -y haxe
 
-      # Build your heaps android project
-      - name: Build project
-        run: |
-          haxe build.hxml   # ganti dengan hxml milik repository itu
+        haxelib install heaps
+        haxelib install hlsdl
+
+    ###################################################################
+    # STEP 5 — Run Haxe compile (creates out/main.c)
+    ###################################################################
+    - name: Run Haxe compile.hxml
+      working-directory: app/src/main/haxe
+      run: |
+        echo "---- compile.hxml ----"
+        cat compile.hxml
+        haxe compile.hxml
+
+    ###################################################################
+    # STEP 6 — Build native libraries using CMake
+    ###################################################################
+    - name: Build native (CMake)
+      run: |
+        SRC=app/src/main/cpp
+        BUILD=$SRC/build-android
+        NDK="$ANDROID_SDK_ROOT/ndk/${{ env.NDK_VERSION }}"
+
+        mkdir -p $BUILD
+        cd $BUILD
+
+        cmake -DANDROID_ABI=arm64-v8a \
+              -DANDROID_PLATFORM=android-21 \
+              -DCMAKE_TOOLCHAIN_FILE="$NDK/build/cmake/android.toolchain.cmake" \
+              -DCMAKE_BUILD_TYPE=Release \
+              $SRC
+
+        cmake --build . -- -j$(nproc)
+
+    ###################################################################
+    # STEP 7 — Build APK through Gradle
+    ###################################################################
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug --stacktrace
+      env:
+        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+
+    ###################################################################
+    # STEP 8 — Upload APK artifact
+    ###################################################################
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: heaps-android-debug
+        path: app/build/outputs/apk/debug/*.apk
