--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: Heaps Android POC
+name: Heaps Android POC Build
 
 on:
-  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:
 
 env:
   ANDROID_SDK_ROOT: ${{ runner.home }}/android-sdk
@@ -14,116 +14,133 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-    ###################################################################
-    # STEP 1 — Install JDK 17 (required by sdkmanager)
-    ###################################################################
-    - name: Setup JDK 17 for sdkmanager
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: "17"
+      # JDK17 required by recent sdkmanager
+      - name: Setup JDK 17 (for sdkmanager)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
 
-    ###################################################################
-    # STEP 2 — Install Android SDK + cmdline-tools manually
-    ###################################################################
-    - name: Install Android SDK and cmdline-tools
-      run: |
-        set -e
-        mkdir -p $ANDROID_SDK_ROOT
-        cd $ANDROID_SDK_ROOT
+      - name: Install Android cmdline-tools (robust)
+        run: |
+          set -e
+          SDKROOT="$HOME/android-sdk"
+          mkdir -p "$SDKROOT"
+          cd "$SDKROOT"
 
-        wget -q https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip -O tools.zip
-        unzip -q tools.zip -d temp
+          # download commandline-tools (pick a stable release compatible with sdkmanager)
+          TOOL_URL="https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
+          wget -q "$TOOL_URL" -O cmdline-tools.zip
+          unzip -q cmdline-tools.zip -d temp
 
-        mkdir -p cmdline-tools
-        mv temp/cmdline-tools cmdline-tools/latest
+          # Normalize into $SDKROOT/cmdline-tools/latest
+          mkdir -p cmdline-tools
+          if [ -d temp/cmdline-tools ]; then
+            # some zips include top-level cmdline-tools/
+            rm -rf cmdline-tools/latest || true
+            mv temp/cmdline-tools cmdline-tools/latest
+          else
+            # other zips extract top-level files (fallback)
+            mkdir -p cmdline-tools/latest
+            mv temp/* cmdline-tools/latest/ || true
+          fi
 
-        echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
-        echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
+          # ensure platform-tools placeholder dir exists; will be installed next
+          mkdir -p platform-tools
 
-    - name: Accept SDK licenses
-      run: yes | sdkmanager --licenses
+          # export env so subsequent steps can use sdkmanager
+          echo "ANDROID_SDK_ROOT=$SDKROOT" >> $GITHUB_ENV
+          echo "$SDKROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "$SDKROOT/platform-tools" >> $GITHUB_PATH
 
-    - name: Install Android packages
-      run: |
-        sdkmanager "platforms;android-33" \
-                   "platform-tools" \
-                   "build-tools;31.0.0" \
-                   "cmake;3.22.1" \
-                   "ndk;${{ env.NDK_VERSION }}"
+      - name: Accept Android SDK licenses
+        run: |
+          yes | sdkmanager --licenses
 
-    ###################################################################
-    # STEP 3 — Switch back to JDK 8 (for Gradle & project compatibility)
-    ###################################################################
-    - name: Setup JDK 8 for Gradle
-      uses: actions/setup-java@v4
-      with:
-        distribution: temurin
-        java-version: "8"
+      - name: Install Android packages (platform-tools, build-tools, NDK, cmake)
+        run: |
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;30.0.3" \
+                    "ndk;${{ env.NDK_VERSION }}" "cmake;3.22.1"
 
-    ###################################################################
-    # STEP 4 — Install Haxe + dependencies
-    ###################################################################
-    - name: Install Haxe and libs
-      run: |
-        sudo add-apt-repository -y ppa:haxe/releases
-        sudo apt-get update -y
-        sudo apt-get install -y haxe
+      # Switch back to JDK8 for Haxe/Gradle compatibility with this old project
+      - name: Setup JDK 8 (for Gradle / Haxe)
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '8'
 
-        haxelib install heaps
-        haxelib install hlsdl
+      - name: Install Haxe & haxelib libs
+        run: |
+          set -e
+          sudo apt-get update -y
+          sudo apt-get install -y software-properties-common apt-transport-https lsb-release
+          sudo add-apt-repository -y ppa:haxe/releases
+          sudo apt-get update -y
+          sudo apt-get install -y haxe
 
-    ###################################################################
-    # STEP 5 — Run Haxe compile (creates out/main.c)
-    ###################################################################
-    - name: Run Haxe compile.hxml
-      working-directory: app/src/main/haxe
-      run: |
-        echo "---- compile.hxml ----"
-        cat compile.hxml
-        haxe compile.hxml
+          mkdir -p $HOME/.haxelib
+          # install libs used in compile.hxml
+          haxelib install heaps
+          haxelib install hlsdl
 
-    ###################################################################
-    # STEP 6 — Build native libraries using CMake
-    ###################################################################
-    - name: Build native (CMake)
-      run: |
-        SRC=app/src/main/cpp
-        BUILD=$SRC/build-android
-        NDK="$ANDROID_SDK_ROOT/ndk/${{ env.NDK_VERSION }}"
+      - name: Show compile.hxml (debug)
+        run: |
+          echo "=== compile.hxml ==="
+          sed -n '1,200p' app/src/main/haxe/compile.hxml || true
+          echo "===================="
 
-        mkdir -p $BUILD
-        cd $BUILD
+      - name: Run Haxe compile.hxml
+        working-directory: app/src/main/haxe
+        run: |
+          set -e
+          # run compile
+          haxe compile.hxml
 
-        cmake -DANDROID_ABI=arm64-v8a \
-              -DANDROID_PLATFORM=android-21 \
-              -DCMAKE_TOOLCHAIN_FILE="$NDK/build/cmake/android.toolchain.cmake" \
-              -DCMAKE_BUILD_TYPE=Release \
-              $SRC
+      - name: Inspect generated native output (debug)
+        run: |
+          echo "Listing app/src/main/cpp/out (if exists):"
+          ls -la app/src/main/cpp/out || true
+          echo "Listing app/src/main/cpp:"
+          ls -la app/src/main/cpp || true
 
-        cmake --build . -- -j$(nproc)
+      - name: Build native with CMake (if CMakeLists.txt exists)
+        run: |
+          set -e
+          NDK_ROOT="$HOME/android-sdk/ndk/${{ env.NDK_VERSION }}"
+          SRC_DIR="$(pwd)/app/src/main/cpp"
+          BUILD_DIR="$SRC_DIR/build-android"
 
-    ###################################################################
-    # STEP 7 — Build APK through Gradle
-    ###################################################################
-    - name: Make gradlew executable
-      run: chmod +x ./gradlew
+          if [ -f "$SRC_DIR/CMakeLists.txt" ]; then
+            mkdir -p "$BUILD_DIR"
+            cd "$BUILD_DIR"
 
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug --stacktrace
-      env:
-        ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+            cmake -DCMAKE_TOOLCHAIN_FILE="$NDK_ROOT/build/cmake/android.toolchain.cmake" \
+                  -DANDROID_ABI=arm64-v8a \
+                  -DANDROID_PLATFORM=android-21 \
+                  -DANDROID_NDK="$NDK_ROOT" \
+                  -DCMAKE_BUILD_TYPE=Release \
+                  "$SRC_DIR"
 
-    ###################################################################
-    # STEP 8 — Upload APK artifact
-    ###################################################################
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: heaps-android-debug
-        path: app/build/outputs/apk/debug/*.apk
+            cmake --build . -- -j$(nproc)
+          else
+            echo "No CMakeLists.txt found in $SRC_DIR — skipping CMake build."
+          fi
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Build Debug APK (Gradle)
+        run: ./gradlew assembleDebug --stacktrace
+        env:
+          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
+          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: heaps-android-poc-apk
+          path: app/build/outputs/apk/debug/*.apk
