Install hashlink library in GitHub Actions workflow
Added installation of the hashlink library in the workflow.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,6 +76,7 @@ jobs:
           mkdir -p $HOME/.haxelib
           haxelib install heaps
           haxelib install hlsdl
+          haxelib install hashlink
 
       - name: Show compile.hxml (debug)
         run: |
