--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Heaps Android Build
+name: Heaps Android POC Build (override openal & hashlink)
 
 on:
   push:
@@ -15,55 +15,66 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup JDK 17
+      - name: Setup JDK 17 (required for sdkmanager)
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: "17"
+          java-version: '17'
 
-      - name: Install Android commandline tools
+      - name: Install Android commandline tools (robust) and add to PATH
         run: |
           set -e
           SDKROOT="$HOME/android-sdk"
           mkdir -p "$SDKROOT"
           cd "$SDKROOT"
 
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip -O tools.zip
-          unzip -q tools.zip -d temp
+          TOOL_URL="https://dl.google.com/android/repository/commandlinetools-linux-12266719_latest.zip"
+          echo "Downloading $TOOL_URL"
+          wget -q "$TOOL_URL" -O cmdline-tools.zip
 
+          rm -rf temp cmdline-tools || true
+          unzip -q cmdline-tools.zip -d temp
+
+          # Normalize into cmdline-tools/latest/
           mkdir -p cmdline-tools
-          mv temp/cmdline-tools cmdline-tools/latest || mv temp cmdline-tools/latest
+          if [ -d temp/cmdline-tools ]; then
+            rm -rf cmdline-tools/latest || true
+            mv temp/cmdline-tools cmdline-tools/latest
+          else
+            mkdir -p cmdline-tools/latest
+            mv temp/* cmdline-tools/latest/ || true
+          fi
 
           mkdir -p platform-tools
 
+          # expose to subsequent steps
           echo "ANDROID_SDK_ROOT=$SDKROOT" >> $GITHUB_ENV
           echo "$SDKROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
           echo "$SDKROOT/platform-tools" >> $GITHUB_PATH
 
-      - name: Accept licenses
+      - name: Accept Android SDK licenses
         run: yes | sdkmanager --licenses
 
-      - name: Install Android packages
+      - name: Install Android packages (platform-tools, build-tools, NDK, cmake)
         run: |
-          sdkmanager "platform-tools" \
-                     "platforms;android-33" \
-                     "build-tools;30.0.3" \
-                     "ndk;${{ env.NDK_VERSION }}" \
-                     "cmake;3.22.1"
+          set -e
+          sdkmanager "platform-tools" "platforms;android-33" "build-tools;30.0.3" \
+            "ndk;${{ env.NDK_VERSION }}" "cmake;3.22.1"
 
-      - name: Setup JDK 8 (for Haxe/Gradle)
+      - name: Setup JDK 8 (for Haxe and Gradle)
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: "8"
+          java-version: '8'
 
-      - name: Install Haxe + haxelib
+      - name: Install Haxe and haxelib libs (hashlink from git)
         run: |
+          set -e
           sudo apt-get update -y
-          sudo apt-get install -y software-properties-common git wget
+          sudo apt-get install -y software-properties-common apt-transport-https lsb-release wget git
           sudo add-apt-repository -y ppa:haxe/releases
           sudo apt-get update -y
           sudo apt-get install -y haxe
@@ -71,70 +82,116 @@ jobs:
           mkdir -p $HOME/.haxelib
           chmod -R a+rw $HOME/.haxelib
 
+          # Install required haxelib packages.
           haxelib git hashlink https://github.com/HaxeFoundation/hashlink
           haxelib install heaps
           haxelib install hlsdl
           haxelib install hxcpp || true
 
-      - name: Replace OpenAL-soft with latest
+          echo "haxelib list:"
+          haxelib list || true
+
+      - name: Replace OpenAL-soft with latest and patch for Android
         run: |
+          set -e
           CPP_DIR="app/src/main/cpp"
           OLDDIR="$CPP_DIR/openal-soft"
           NEWTMP="$CPP_DIR/openal-soft-new"
 
+          echo "Removing old OpenAL-soft (if exists): $OLDDIR"
           rm -rf "$OLDDIR" || true
+
+          echo "Cloning openal-soft (shallow)..."
           git clone --depth=1 https://github.com/kcat/openal-soft "$NEWTMP"
+
+          echo "Moving into $OLDDIR"
           mv "$NEWTMP" "$OLDDIR"
 
+          echo "Prepending Android/disable flags to openal CMakeLists.txt"
           CMAKE_FILE="$OLDDIR/CMakeLists.txt"
           if [ -f "$CMAKE_FILE" ]; then
-            TMP="$(mktemp)"
-            echo "set(ALSOFT_REQUIRE_ANDROID ON)
-set(ALSOFT_UTILS OFF)
-set(ALSOFT_EXAMPLES OFF)
-set(ALSOFT_TESTS OFF)
-set(ALSOFT_CONFIG OFF)
-set(ALSOFT_HRTF_DEFS OFF)
-" > "$TMP"
-            cat "$CMAKE_FILE" >> "$TMP"
-            mv "$TMP" "$CMAKE_FILE"
+            TMPFILE="$(mktemp)"
+            printf "%s\n" "set(ALSOFT_REQUIRE_ANDROID ON)" \
+                         "set(ALSOFT_UTILS OFF)" \
+                         "set(ALSOFT_EXAMPLES OFF)" \
+                         "set(ALSOFT_TESTS OFF)" \
+                         "set(ALSOFT_CONFIG OFF)" \
+                         "set(ALSOFT_HRTF_DEFS OFF)" > "$TMPFILE"
+            cat "$CMAKE_FILE" >> "$TMPFILE"
+            mv "$TMPFILE" "$CMAKE_FILE"
+            echo "Patched $CMAKE_FILE; head:"
+            head -n 20 "$CMAKE_FILE" || true
+          else
+            echo "Warning: openal CMakeLists not found at $CMAKE_FILE"
           fi
 
-      - name: Haxe compile
-        working-directory: app/src/main/haxe
-        run: haxe compile.hxml
-
-      - name: Build native via CMake
+      - name: Show compile.hxml (for debug)
         run: |
-          NDK="$HOME/android-sdk/ndk/${{ env.NDK_VERSION }}"
-          SRC="app/src/main/cpp"
-          BUILD="$SRC/build"
+          echo "---- compile.hxml ----"
+          sed -n '1,200p' app/src/main/haxe/compile.hxml || true
+          echo "----------------------"
 
-          if [ -f "$SRC/CMakeLists.txt" ]; then
-            mkdir -p "$BUILD"
-            cd "$BUILD"
+      - name: Run Haxe compile.hxml (working dir)
+        working-directory: app/src/main/haxe
+        run: |
+          set -e
+          haxe compile.hxml
+
+      - name: Inspect generated native output (debug)
+        run: |
+          echo "Listing app/src/main/cpp/out (if exists):"
+          ls -la app/src/main/cpp/out || true
+          echo "Listing app/src/main/cpp:"
+          ls -la app/src/main/cpp || true
+
+      - name: Build native with CMake (if CMakeLists.txt exists)
+        run: |
+          set -e
+          NDK_ROOT="$HOME/android-sdk/ndk/${{ env.NDK_VERSION }}"
+          SRC_DIR="$(pwd)/app/src/main/cpp"
+          BUILD_DIR="$SRC_DIR/build-android"
+
+          echo "NDK_ROOT=$NDK_ROOT"
+          if [ -z "$NDK_ROOT" ]; then
+            echo "NDK_ROOT empty; abort"
+            exit 1
+          fi
+
+          if [ -f "$SRC_DIR/CMakeLists.txt" ]; then
+            mkdir -p "$BUILD_DIR"
+            cd "$BUILD_DIR"
 
             cmake \
-              -DCMAKE_TOOLCHAIN_FILE="$NDK/build/cmake/android.toolchain.cmake" \
+              -DCMAKE_TOOLCHAIN_FILE="$NDK_ROOT/build/cmake/android.toolchain.cmake" \
               -DANDROID_ABI=arm64-v8a \
               -DANDROID_PLATFORM=android-21 \
+              -DANDROID_NDK="$NDK_ROOT" \
               -DCMAKE_BUILD_TYPE=Release \
-              "$SRC"
+              -DALSOFT_REQUIRE_ANDROID=ON \
+              -DALSOFT_UTILS=OFF \
+              -DALSOFT_EXAMPLES=OFF \
+              -DALSOFT_TESTS=OFF \
+              -DALSOFT_CONFIG=OFF \
+              -DALSOFT_HRTF_DEFS=OFF \
+              "$SRC_DIR"
 
             cmake --build . -- -j$(nproc)
+          else
+            echo "No CMakeLists.txt found in $SRC_DIR — skipping CMake build."
           fi
 
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
+        run: chmod +x ./gradlew || true
 
-      - name: Build Debug APK
-        run: ./gradlew assembleDebug --stacktrace
-        env:
-          ANDROID_HOME: ${{ env.ANDROID_SDK_ROOT }}
-          ANDROID_SDK_ROOT: ${{ env.ANDROID_SDK_ROOT }}
+      - name: Build Debug APK (Gradle)
+        run: |
+          set -e
+          export ANDROID_HOME="$HOME/android-sdk"
+          export ANDROID_SDK_ROOT="$HOME/android-sdk"
+          ./gradlew assembleDebug --stacktrace
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
-          name: heaps-android-apk
+          name: heaps-android-poc-apk
           path: app/build/outputs/apk/debug/*.apk
